--- a/views/display-docs.ejs
+++ b/views/display-docs.ejs
@@ -16,15 +16,14 @@
         
         <div class="create-subdoc-block" style="display:none;">
             <form class="well form-inline" onsubmit="docs_manager.createSubDoc($(this).find('[name=subDocName]').val(),$(this).find('#parentDocs').val());return false;">
-                <input type="text" name="subDocName" class="input-medium" placeholder="New Document"
-                />
+                <input type="text" name="subDocName" class="input-medium" placeholder="New Document" />
                 <select id="parentDocs">
                     <option value="">Select the Master document...</option>
                     <% for (var i=0 ; i < userDocuments.length; i++) { %>
                         <option value="<%= userDocuments[i].id %>">
                             <%=userDocuments[i].name %>
                         </option>
-                        <% } %>
+                    <% } %>
                 </select>
                 <button type="submit" class="btn">Create Sub Doc</button>
             </form>
@@ -55,28 +54,39 @@
                     <div class="btn-group pull-right">
                         <% if (userDocuments[i].readAccess) { %>
                             <button disabled class="btn">Read</button>
-                            <% } else { %>
-                                <button onclick="docs_manager.reqReadAccess('<%= userDocuments[i].id %>', '<%= userDocuments[i].name %>');"
-                                class="btn">Read</button>
-                                <% } if (userDocuments[i].writeAccess) { %>
-                                    <button class="btn" disabled>Write</button>
-                                    <% } else { %>
-                                        <button onclick="docs_manager.reqWriteAccess('<%= userDocuments[i].id %>', '<%= userDocuments[i].name %>');"
-                                        class="btn">Write</button>
-                                        <% } if (userDocuments[i].execAccess) { %>
-                                            <button class="btn" disabled>Exec</button>
-                                            <% } else { %>
-                                                <button onclick="docs_manager.reqExecAccess('<%= userDocuments[i].id %>', '<%= userDocuments[i].name %>');"
-                                                class="btn">Exec</button>
-                                                <% } %>
-                                                    <% if (userDocuments[i].canShare) { %>
-                                                        <button class="btn" onclick="docs_manager.openShareDoc('<%= userDocuments[i].id %>', '<%= userDocuments[i].name %>');">Share</button>
-                                                        <% } %>
+                        <% } else { %>
+                            <button onclick="docs_manager.reqReadAccess('<%= userDocuments[i].id %>', '<%= userDocuments[i].name %>');"
+                            class="btn">Read</button>
+                        <% } if (userDocuments[i].writeAccess) { %>
+                            <button class="btn" disabled>Write</button>
+                        <% } else { %>
+                            <button onclick="docs_manager.reqWriteAccess('<%= userDocuments[i].id %>', '<%= userDocuments[i].name %>');"
+                            class="btn">Write</button>
+                        <% } if (userDocuments[i].execAccess) { %>
+                            <button class="btn" disabled>Exec</button>
+                        <% } else { %>
+                            <button onclick="docs_manager.reqExecAccess('<%= userDocuments[i].id %>', '<%= userDocuments[i].name %>');"
+                            class="btn">Exec</button>
+                        <% } if (userDocuments[i].canShare) { %>
+                            <button class="btn" onclick="docs_manager.openShareDoc('<%= userDocuments[i].id %>', '<%= userDocuments[i].name %>');">Share</button>
+                        <% } %>
                     </div>
                     <button onclick="docs_manager.deleteDoc('<%= userDocuments[i].id %>', '<%= userDocuments[i].name %>');"
                     style="display:none;" class="close">x</button>
+                    <ul class="list-of-subDocuments nav nav-list">
+                        <% if (userDocuments[i].subDocs !== undefined) { for(var j = 0; j < userDocuments[i].subDocs.length; j++) { %>
+                            <li data-subDoc-id="<%= userDocuments[i].subDocs[j].id %>">
+                                <a style="float:left;clear:both" href="/document/<%= userDocuments[i].subDocs[j].id %>"><%= userDocuments[i].subDocs[j].name %></a>    
+                            </li>
+                        
+                        <% }} %>
+                    
+                        
+                    </ul>
+                    
+                    
                 </li>
-                <% } %>
+            <% } %>
         </ul>
     </div>
 </div>
