--- a/views/open-document.ejs
+++ b/views/open-document.ejs
@@ -17,8 +17,9 @@
     <div id="header">
       <div id="htext">
 	Editing&nbsp;
-	<b class="current-doc" data-doc-id="<%= userDocument.id %>" id="docname"><%= userDocument.name %></b>
-	<b><a class="save-document-link" href="javascript:void(0);" onclick="docs_manager.saveDoc('<%= userDocument.id %>', '<%= userDocument.name %>');">Save</a></b>
+	<b class="current-doc" data-doc-id="<%= userDocument.id %>" id="docname"><%= userDocument.name %></b>&nbsp; of Project:&nbsp;
+	<b class="current-project" data-doc-project="<%= userDocument.projectId%>" id="projectName"><%= userDocument.projectName %></b>
+	<b><a class="save-document-link" href="javascript:void(0);" onclick="docs_manager.saveDoc('<%= userDocument.id %>');">Save</a></b>
 	<small id="last-saved-time-parent" style="display:none;" class="pull-right">
 	  Last Saved <span id="last-saved-time"></span>
 	</small>  
@@ -31,9 +32,9 @@
   </div>
   <div class="compiler-view span6" style="display:none;float:right;">
     <!-- button to compile and display pdf document -->
-    <button class="btn btn-primary" onclick="docs_manager.compileAndRender('<%= userDocument.id %>', '<%= userDocument.name %>');">
+    <button class="btn btn-primary" onclick="docs_manager.compileAndRender('<%= userDocument.projectId %>', '<%= userDocument.projectName%>','<%= userDocument.id %>');">
       <i class="icon-film"></i>
-      Compile and Render
+      Compile and Render Project
     </button>
     <% if (userDocument.canShare)  { %>
     <!-- 
