--- a/public/css/style.css
+++ b/public/css/style.css
@@ -51,8 +51,8 @@ div.modal-body div.btn-group {
 
 div.message-box {
     height: 300px;
-    width: 400px;
-    overflow: scroll;
+    width: 420px;
+    overflow: auto;
     background: #efefef;
 }
 
