--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,6 +6,11 @@ form.pull-right {
     margin-left: 40px;
 }
 
+
+.spacer5 { 
+    height: 5px; width: 100%; font-size: 0; margin: 0; padding: 0; border: 0; display: block; 
+}
+
 .welcome-message {
     margin-top: 10px;
 }
