--- a/views/display-docs.ejs
+++ b/views/display-docs.ejs
@@ -35,58 +35,72 @@
             </button>
             <ul class="dropdown-menu">
                 <li>
-                    <a href="javascript:void(0);" onclick="docs_manager.openCreateDocView();">Create New Doc</a>
+                    <a href="javascript:void(0);" onclick="docs_manager.openCreateDocView();">Create New Project</a>
                     <a href="javascript:void(0);" onclick="docs_manager.showDeleteButtons();">Delete Doc</a>
                     <a href="javascript:void(0);" onclick="docs_manager.openCreateSubDocView();"> Create New Sub Doc</a>
                     <a href="javascript:void(0);" onclick="user_messages.showMessages();">My Messages</a>
                 </li>
             </ul>
         </div>
-        <ul class="list-of-documents nav nav-list">
-            <li class="nav-header">
+        <div class="list-of-documents nav nav-list">
+            <div class="nav-header">
                 <b>My Latex Documents</b>
-            </li>
+            </div>
+            <div class="spacer5">
+            </div>
             <!-- remember to set one of the <li>'s to "active" class -->
             <!-- list of all the user's documents -->
-            <% for (var i=0 ; i < userDocuments.length; i++) { %>
-                <li data-doc-id="<%= userDocuments[i].id %>">
-                    <a style="float:left;clear:both" href="/document/<%= userDocuments[i].masterId %>"><%= userDocuments[i].name %></a>
-                    <div class="btn-group pull-right">
-                        <% if (userDocuments[i].readAccess) { %>
-                            <button disabled class="btn">Read</button>
-                        <% } else { %>
-                            <button onclick="docs_manager.reqReadAccess('<%= userDocuments[i].id %>', '<%= userDocuments[i].name %>');"
-                            class="btn">Read</button>
-                        <% } if (userDocuments[i].writeAccess) { %>
-                            <button class="btn" disabled>Write</button>
-                        <% } else { %>
-                            <button onclick="docs_manager.reqWriteAccess('<%= userDocuments[i].id %>', '<%= userDocuments[i].name %>');"
-                            class="btn">Write</button>
-                        <% } if (userDocuments[i].execAccess) { %>
-                            <button class="btn" disabled>Exec</button>
-                        <% } else { %>
-                            <button onclick="docs_manager.reqExecAccess('<%= userDocuments[i].id %>', '<%= userDocuments[i].name %>');"
-                            class="btn">Exec</button>
-                        <% } if (userDocuments[i].canShare) { %>
-                            <button class="btn" onclick="docs_manager.openShareDoc('<%= userDocuments[i].id %>', '<%= userDocuments[i].name %>');">Share</button>
-                        <% } %>
+            <div class="accordion" id="listOfDocuments">
+                <% for (var i=0 ; i < userDocuments.length; i++) { %>
+                    <div class="accordion-group">
+
+                    
+                        <div class="accordion-heading">
+                        
+                            <button onclick="docs_manager.deleteDoc('<%= userDocuments[i].id %>', '<%= userDocuments[i].name %>');" style="display:none;" class="close pull-left">x</button>
+                        
+                            <a class="accordion-toggle" data-toggle="collapse" data-parent="#listOfDocuments" href="#<%= userDocuments[i].masterId %>">  Show Project: <%= userDocuments[i].name %></a>
+                            
+                        </div>
+                        <div id="<%= userDocuments[i].masterId %>" class="accordion-body collapse">
+                            <div class="accordion-inner" data-doc-id="<%= userDocuments[i].id %>">
+                                    <a style="float:left;clear:both" href="/document/<%= userDocuments[i].masterId %>"><%= userDocuments[i].name %></a>
+                                    <div class="btn-group pull-right">
+                                        <% if (userDocuments[i].readAccess) { %>
+                                            <button disabled class="btn">Read</button>
+                                        <% } else { %>
+                                            <button onclick="docs_manager.reqReadAccess('<%= userDocuments[i].id %>', '<%= userDocuments[i].name %>');"
+                                            class="btn">Read</button>
+                                        <% } if (userDocuments[i].writeAccess) { %>
+                                            <button class="btn" disabled>Write</button>
+                                        <% } else { %>
+                                            <button onclick="docs_manager.reqWriteAccess('<%= userDocuments[i].id %>', '<%= userDocuments[i].name %>');"
+                                            class="btn">Write</button>
+                                        <% } if (userDocuments[i].execAccess) { %>
+                                            <button class="btn" disabled>Exec</button>
+                                        <% } else { %>
+                                            <button onclick="docs_manager.reqExecAccess('<%= userDocuments[i].id %>', '<%= userDocuments[i].name %>');"
+                                            class="btn">Exec</button>
+                                        <% } if (userDocuments[i].canShare) { %>
+                                            <button class="btn" onclick="docs_manager.openShareDoc('<%= userDocuments[i].id %>', '<%= userDocuments[i].name %>');">Share</button>
+                                        <% } %>
+                                    </div>
+                                    
+                                    <ul class="list-of-subDocuments nav nav-list">
+                                        <% for(var j = 0; j < userDocuments[i].subDocs.length; j++) { %>
+                                            <li data-subDoc-id="<%= userDocuments[i].subDocs[j].id %>">
+                                                <a style="float:left;clear:both" href="/document/<%= userDocuments[i].subDocs[j].id %>"><%= userDocuments[i].subDocs[j].name %></a>    
+                                            </li>
+                                        <% } %>
+                                        
+                                    </ul>
+                            </div>
+                        </div>
                     </div>
-                    <button onclick="docs_manager.deleteDoc('<%= userDocuments[i].id %>', '<%= userDocuments[i].name %>');"
-                    style="display:none;" class="close">x</button>
-                    <ul class="list-of-subDocuments nav nav-list">
-                        <% for(var j = 0; j < userDocuments[i].subDocs.length; j++) { %>
-                            <li data-subDoc-id="<%= userDocuments[i].subDocs[j].id %>">
-                                <a style="float:left;clear:both" href="/document/<%= userDocuments[i].subDocs[j].id %>"><%= userDocuments[i].subDocs[j].name %></a>    
-                            </li>
-                        
-                        <% } %>
-                    
-                        
-                    </ul>
-                    
-                    
-                </li>
-            <% } %>
-        </ul>
+                <% } %>
+                
+                
+            </div>
+        </div>
     </div>
 </div>
