--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,6 +11,10 @@ form.pull-right {
     height: 5px; width: 100%; font-size: 0; margin: 0; padding: 0; border: 0; display: block; 
 }
 
+.spacer10{ 
+    height: 10px; width: 100%; font-size: 0; margin: 0; padding: 0; border: 0; display: block; 
+}
+
 .welcome-message {
     margin-top: 10px;
 }
