--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -53,7 +53,7 @@
     <!-- import our defined handle bars templates here -->
     <%- partial("application-templates.ejs") %>
     
-    <div class="navbar navbar-fixed-top">
+    <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
           <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
