--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,14 +6,33 @@ form.pull-right {
     margin-left: 40px;
 }
 
-
+/*space of size 5px*/
 .spacer5 { 
     height: 5px; width: 100%; font-size: 0; margin: 0; padding: 0; border: 0; display: block; 
 }
 
+/*space of size 10px*/
 .spacer10{ 
     height: 10px; width: 100%; font-size: 0; margin: 0; padding: 0; border: 0; display: block; 
 }
+
+/*border around a div*/
+.box {
+    border: 1px solid #E5E5E5;
+    border-radius: 4px 4px 4px 4px;
+    margin-bottom: 4px;
+}
+
+/*overrides the default behaviour of bootstrap for navbox*/
+.list-of-documents .navbar {
+    margin-bottom: 0;
+}
+/* makes sure the inner part has some distance to the box*/
+.documentListingInner {
+    margin: 9px 15px 9px;
+}
+
+
 
 .welcome-message {
     margin-top: 10px;
