the adding of a document now preselects the project

--- a/views/application-templates.ejs
+++ b/views/application-templates.ejs
@@ -15,7 +15,7 @@
                         {{/if}}
                     </li>
                     <li> <a href="javascript:void(0);" onclick="docs_manager.deleteDoc('{{id}}', '{{name}}')">Delete Project</a> </li>
-                    <li> <a href="javascript:void(0);" onclick="docs_manager.openCreateSubDocView();"> Create New Sub Doc</a> </li>
+                    <li> <a href="javascript:void(0);" onclick="docs_manager.openCreateSubDocView('{{id}}');"> Add Document</a> </li>
                 </ul>
             </div>
             
