--- a/views/display-docs.ejs
+++ b/views/display-docs.ejs
@@ -8,7 +8,7 @@
     <div class="documents-section span6">
         <div class="row create-doc-block" style="display:none;">
             <form class="well form-inline" onsubmit="docs_manager.createDoc($(this).find('[name=docName]').val());return false;">
-                <input type="text" name="docName" class="input-medium" placeholder="New Document"
+                <input type="text" name="docName" class="input-medium" placeholder="New Project"
                 />
                 <button type="submit" class="btn">Create Doc</button>
             </form>
@@ -17,15 +17,16 @@
         <div class="row create-subdoc-block" style="display:none;">
             <form class="well form-inline" onsubmit="docs_manager.createSubDoc($(this).find('[name=subDocName]').val(),$(this).find('#parentDocs').val());return false;">
                 <input type="text" name="subDocName" class="input-medium" placeholder="New Document" />
+                for Project: 
                 <select id="parentDocs">
-                    <option value="">Select the Master document...</option>
+                    <option value="">Select the Project...</option>
                     <% for (var i=0 ; i < userDocuments.length; i++) { %>
                         <option value="<%= userDocuments[i].id %>">
                             <%=userDocuments[i].name %>
                         </option>
                     <% } %>
                 </select>
-                <button type="submit" class="btn">Create Sub Doc</button>
+                <button type="submit" class="btn">Add Doc</button>
             </form>
         </div>
         
@@ -72,7 +73,7 @@
                                         <% } %>
                                     </li>
                                     <li> <a href="javascript:void(0);" onclick="docs_manager.deleteDoc('<%= userDocuments[i].id %>', '<%= userDocuments[i].name %>')">Delete Project</a> </li>
-                                    <li> <a href="javascript:void(0);" onclick="docs_manager.openCreateSubDocView();"> Create New Sub Doc</a> </li>
+                                    <li> <a href="javascript:void(0);" onclick="docs_manager.openCreateSubDocView('<%= userDocuments[i].id %>');"> Add Document</a> </li>
                                 </ul>
                             </div>
                             
